@@ -258,7 +258,7 @@ public class TermAutomatonQuery extends Query {
 
     // NOTE: not quite correct, because if terms were added in different
     // order in each query but the language is the same, we return false:
-    return (this.getBoost() == other.getBoost())
+    return super.equals(o)
       && this.termToID.equals(other.termToID) &&
       Operations.sameLanguage(det, other.det);
   }
@@ -269,7 +269,7 @@ public class TermAutomatonQuery extends Query {
     if (det == null) {
       throw new IllegalStateException("please call finish first");
     }
-    return Float.floatToIntBits(getBoost()) ^ termToID.hashCode() + det.toDot().hashCode();
+    return super.hashCode() ^ termToID.hashCode() + det.toDot().hashCode();
   }
 
   /** Returns the dot (graphviz) representation of this automaton.
